--- a/templates/base.html
+++ b/templates/base.html
@@ -81,8 +81,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/profile/{{user.id}}/">
-            <img  src="{{user.picture.url}}" alt="Your profile photo" style="
+          <a href="/profile/{{request.user.id}}/">
+            <img  src="{{request.user.picture.url}}" alt="Your profile photo" style="
           height: 40px; 
           width: 40px;
           border-radius: 20px;
