--- a/templates/messages.html
+++ b/templates/messages.html
@@ -15,13 +15,15 @@
   <body>
      {% block content %}
      <div class="homepage-header">
-       <h2>Messages for {{request.user.username}}</h2>
+       <h1>Messages for {{request.user.username}}</h1>
       </div>
       
       <div class="messages-container">
       {% for item in messages %}
-        <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-          <div class="card-header" style="background: darkgreen;">Message from: 
+        <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
+          <div class="card-header" style="
+            background: darkgreen;">
+            Message from: 
             <a href="/profile/{{item.author.id}}/" style="text-decoration: none;
             color: white;">
               <img  src="{{item.author.picture.url}}" alt="Your profile photo" style="
@@ -39,7 +41,14 @@
             <h4 class="card-title">{{ item.message }}</h4>
             <p class="card-text">at: {{ item.date }}</p>
           </div>
-          <button ><a href='/delete/message/{{item.id}}'>Delete</a></button>
+          <a href='/delete/message/{{item.id}}/'>
+          <button >
+              Delete
+            </button>
+            </a>
+            <a href="/message/user/{{item.author.id}}">
+              <button>reply</button>
+            </a>
         </div>
         {% endfor %}
       </div>
