--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -31,7 +31,7 @@
       <a class="signup-btn" href="/signup/">
         <button class="btn-form" type="submit">Sign Up</button>
       </a>
-      {% else %}
+      {% elif header == "Signup" %}
       <h6>--- Already a member? Login! ---</h6>
       <a class="signup-btn" href="/login/">
         <button class="btn-form" type="submit">Login</button>
