--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -86,11 +86,11 @@
 </div>
 
 <div class="homepage-container">
-<div class="homepage-item" style="width: 350px; border-right: 3px solid #ffc107; padding-right: 40px; margin-left: 20px;"">
+<div class="homepage-item" style="display:flex; flex-direction: column; align-items: center; width: 600px; border: 3px solid #ffc107;">
 <h2>Recent Questions</h2>
 <br>
 {% for faq in faqs|slice:":4" %}
-<div class="card" style="background-color: #ffc107; font-weight: bold; box-shadow: 1px 1px 30px black;">
+<div class="card" style="width: 500px; background-color: #ffc107; font-weight: bold; box-shadow: 1px 1px 30px black;">
   <div class="card-header">
       Game: {{faq.game}}
   </div>
@@ -110,12 +110,12 @@
   </div>
 
 
-  <div class="homepage-item" style="width: 350px; border-right: 3px solid #ffc107; padding-right: 40px;">
+  <div class="homepage-item" style="display:flex; flex-direction: column; align-items: center; width: 600px; border: 3px solid #ffc107;">
     <h2>Most active Reviews</h2>
     <br>
     
     {% for review in reviews %}
-    <div class="card" style="background-color: #ffc107; font-weight: bold; box-shadow: 1px 1px 30px black; margin-bottom: 500px;">
+    <div class="card" style=" width:500px; background-color: #ffc107; font-weight: bold; box-shadow: 1px 1px 30px black;">
       <div class="card-header">
           Review Game: {{review.game}}
       </div>
@@ -133,7 +133,7 @@
     </div>
     {% endfor %}
     </div>
-    <div class="homepage-item" style="width: 350px;">
+    <div class="homepage-item" style="display:flex; flex-direction: column; align-items: center; width: 600px; border: 3px solid #ffc107;">
       <h2>Top Searched Games</h2>
         {% for game in games|slice:":9" %}
         <ul>
