added rendering of notifcations count on games and messages and profilee

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,7 +18,7 @@
   {% for message in django_messages %}
     <!-- <script>M.toast({html: "{{message}}", classes: 'blue rounded', displayLength:5000});</script> -->
     
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger" role="alert" displayLength:5000>
       {{message}}
     </div>
   {% endfor %}
