--- a/templates/base.html
+++ b/templates/base.html
@@ -102,10 +102,8 @@
     </div>
   </nav>
 </div>
-  {% if messages %}
-  {% for message in messages %}
-    <!-- <script>M.toast({html: "{{message}}", classes: 'blue rounded', displayLength:5000});</script> -->
-    
+  {% if django_messages %}
+  {% for message in django_messages %}
     <div class="alert alert-danger" role="alert">
       {{message}}
     </div>
