--- a/templates/review_detail.html
+++ b/templates/review_detail.html
@@ -24,13 +24,35 @@
           </a>
           </blockquote>
           <div class="card-body">
-            <a href="/create_review_comment/{{review.id}}" class="card-link">Add Comment</a>
+            <a href="/create_review_comment/{{review.id}}" class="card-link"><button class="btn btn-primary" type="button">Add a comment</button></a>
           </div>
+          
+          {% recursetree comments %}
+          
+          <div class="card">
+            <div class="card-header">
+              {{ node.comment }}
+            </div>
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                {% if not node.is_leaf_node %}
+              <ul class="children">
+                <p>{{ children }}</p>
+              </ul>
+              {% endif %}
+                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">{{ node.user }}</cite></footer>
+              </blockquote>
+            </div>
+          </div>
+        
+        {% endrecursetree %}
+          
         </div>
       </div>
 
-      {% recursetree comments %}
+      <!-- {% recursetree comments %}
       <li>
+        </div>
           {{ node.comment }}
           -- {{ node.user }}
           {% if not node.is_leaf_node %}
@@ -39,7 +61,7 @@
               </ul>
           {% endif %}
       </li>
-  {% endrecursetree %}
+  {% endrecursetree %} -->
     
 {% endblock %}
   </body>
