--- a/templates/review_detail.html
+++ b/templates/review_detail.html
@@ -24,22 +24,34 @@
           </a>
           </blockquote>
           <div class="card-body">
-            <a href="/create_review_comment/{{review.id}}" class="card-link">Add Comment</a>
+            <a href="/create_review_comment/{{review.id}}" class="card-link"><button class="btn btn-primary" type="button">Add a comment</button></a>
           </div>
+
+
+          {% recursetree comments %}
+
+          <div class="card">
+            <div class="card-header">
+              {{ node.comment }}
+            </div>
+            {% if not node.is_leaf_node %}
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+              <ul class="children">
+                <p>{{ children }}</p>
+              </ul>
+              <a href="/profile/{{node.user_created.id}}/">
+              <footer class="blockquote-footer"><cite title="Source Title">Created By {{ node.user_created }}</cite></footer>
+            </a>
+            </blockquote>
+          </div>
+          {% endif %}
+          </div>
+          <hr>
+        {% endrecursetree %}          
         </div>
       </div>
 
-      {% recursetree comments %}
-      <li>
-          {{ node.comment }}
-          -- {{ node.user }}
-          {% if not node.is_leaf_node %}
-              <ul class="children">
-                  {{ children }}
-              </ul>
-          {% endif %}
-      </li>
-  {% endrecursetree %}
     
 {% endblock %}
   </body>
