--- a/templates/games.html
+++ b/templates/games.html
@@ -48,7 +48,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Rating: {{game.rating}}</li>
           <li class="list-group-item">
-            Platform: Need to fix when creating games{{game.platform.platform}}
+            Platform: {{game.platform}}
           </li>
           <li class="list-group-item">Release Date: {{game.released_at}}</li>
         </ul>
