--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -103,7 +103,7 @@
     </a>
     </blockquote>
     <div class="card-body">
-      <a href="/create_faq_comment/{{faq.id}}" class="card-link">Comment on FAQ</a>
+      <a href="/create_faq_comment/{{faq.id}}" class="card-link">Answer Question</a>
     </div>
   </div>
 </div>
