--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -13,45 +13,59 @@
   {% block content %}
   <div>
     <h1>Message Notifications</h1>
-    {% for noti in message_notifications %}
+    {% if new_message_notifications %}
+    {% for noti in new_message_notifications %}
     <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">{{noti.message}}</h5>
           <h6 class="card-subtitle mb-2 text-muted">{{noti.user_notified.username}}</h6>
-          <!-- <p class="card-text">{{noti.message}}</p> -->
-          <p class="card-text">{{noti.isNew}}</p>
-          <a href="{% url 'homepage' %}" class="card-link">Go Back Home</a>
         </div>
       </div>
     {% endfor %}
+    {% else %}
+    <h4>You have no new notifications</h4>
+    {% endif %}
 </div>
 <div>
     <h1>Review Notifications</h1>
-    {% for noti in review_notifications %}
+    {% if new_reviewnotifications %}
+    {% for noti in new_review_notifications %}
     <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Someone commented on {{noti.review}}</h5>
           <h6 class="card-subtitle mb-2 text-muted">{{noti.user_notified.username}}</h6>
-          <!-- <p class="card-text">{{noti.message}}</p> -->
-          <p class="card-text">{{noti.isNew}}</p>
-          <a href="{% url 'homepage' %}" class="card-link">Go Back Home</a>
         </div>
       </div>
     {% endfor %}
+    {% else %}
+    <h4>You have no new notifications</h4>
+    {% endif %}
 </div>
 <div>
     <h1>Faq Notifications</h1>
-    {% for noti in faq_notifications %}
+    {% if new_faq_notifications %}
+    {% for noti in new_faq_notifications %}
     <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Someone commented on {{noti.faq}}</h5>
           <h6 class="card-subtitle mb-2 text-muted">{{noti.user_notified.username}}</h6>
-          <!-- <p class="card-text">{{noti.message}}</p> -->
-          <p class="card-text">{{noti.isNew}}</p>
-          <a href="{% url 'homepage' %}" class="card-link">Go Back Home</a>
         </div>
       </div>
     {% endfor %}
+    {% else %}
+    <h4>You have no new notifications</h4>
+    {% endif %}
+</div>
+<div>
+  <h1>Old Notifications</h1>
+  {% for noti in old_notifications %}
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">{{noti.message}}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{noti.user_notified.username}}</h6>
+      </div>
+    </div>
+  {% endfor %}
 </div>
   {% endblock %}
 </body>
