added styling for review and faq threads

--- a/templates/faq_detail.html
+++ b/templates/faq_detail.html
@@ -57,31 +57,25 @@
           </blockquote>
           <div class="card-body">
             <a href="/create_faq_comment/{{faq.id}}" class="card-link"><button class="btn btn-primary" type="button">Answer Question</button></a>
-          </div>
-
-
-          {% recursetree comments %}
-
-          <div class="card">
-            <div class="card-header">
-              {{ node.comment }}
-            </div>
-            {% if not node.is_leaf_node %}
-            <div class="card-body">
-              <blockquote class="blockquote mb-0">
-              <ul class="children">
-                <p>{{ children }}</p>
-              </ul>
-              <a href="/profile/{{node.user.id}}/">
-              <footer class="blockquote-footer"><cite title="Source Title">Created By {{ node.user}}</cite></footer>
-            </a>
-            </blockquote>
-          </div>
-          {% endif %}
-          </div>
-          <hr>
-        {% endrecursetree %}          
+          </div>      
         </div>
+        {% recursetree comments %}
+        <ul>
+          <div class="card" style="width: 18rem;">
+            <div class="card-header">
+              {{node.comment}}
+              <h6>Created by: {{node.user}}</h6>
+            <a href="/reply_faq_comment/{{node.id}}/" class="card-link"><button class="btn btn-primary btn-sm" type="button">Reply</button></a>
+              
+            </div>
+          </div>
+            {% if not node.is_leaf_node %}
+                <li class="children">
+                    {{ children }}
+                </li>
+                {% endif %}
+              </ul>
+    {% endrecursetree %}
       </div>
 {% endblock %}
   </body>
