--- a/templates/review_detail.html
+++ b/templates/review_detail.html
@@ -25,7 +25,12 @@
           </blockquote>
           <div class="card-body">
             <a href="/create_review_comment/{{review.id}}" class="card-link"><button class="btn btn-primary" type="button">Add a comment</button></a>
-          </div>        
+          </div> 
+          {% if review.user_created.username == request.user.username %}
+          <a href='/delete_review/{{review.id}}/'>
+          <button type="button" class="btn btn-danger">Delete</button>  
+        </a>
+          {% endif %}     
         </div>
 
         {% recursetree comments %}
