--- a/templates/review_detail.html
+++ b/templates/review_detail.html
@@ -26,7 +26,7 @@
           <div class="card-body">
             <a href="/create_review_comment/{{review.id}}" class="card-link"><button class="btn btn-primary" type="button">Add a comment</button></a>
           </div> 
-          {% if review.user_created.username == request.user.username %}
+          {% if review.user_created.username == request.user.username or request.user.is_staff %}
           <a href='/delete_review/{{review.id}}/'>
           <button type="button" class="btn btn-danger">Delete</button>  
         </a>
