updated about the devs section

--- a/templates/about_devs.html
+++ b/templates/about_devs.html
@@ -13,19 +13,29 @@
 
 
 {% block content %}
+<h1 style="margin-left: 450px;"><b>About the Devs</b></h1>
 <div class="container">
     <div class="row">
       <div class="col">
-        Jacob Short
+        <h2>Jacob Short</h2>
+        <img src="/media/images/jacobshort.jpg" alt="Picture of Jacob Short" style="height: 200px; width: 200px; ">
+        <p style="font-size: 16px;">"My Name is Jacob and I am studying computer science at SNHU. On my free time when not spending time with my daughter, I love playing Call of Duty and various other games. I was motivated to build a platform where gamers from all around the world can come together and share their experiences. A main goal for me and my team was to add user interactivity to this site as opposed to just being able to search information. We had a blast creating it, and we hope you enjoy!"</p>
       </div>
       <div class="col">
-        Eric Steinke
+        <h2>Eric Steinke</h2>
+        <img src="/media/images/120275060_10224392531708874_640556877809196455_n_3zDf3bp.jpg" alt="Picture of Eric Steinke" style="height: 200px; width: 200px; ">
+
+        <p style="font-size: 16px;">"My name is Eric! I love to code and I love to learn. I really loved making this website and working with my teammates. I'm a a pretty avid gamer and game watcher (Twitch)I hope you enjoy it as much as I enjoyed making it."</p>
       </div>
       <div class="col">
-        Aris Fornasari
+        <h2>Aris Fornasari</h2>
+        <img src="/media/images/ariswhitet.jpg" alt="Picture of Aris Fornasari" style="height: 200px; width: 200px; ">
+        <p style="font-size: 16px;">Test</p>
       </div>
       <div class="col">
-        Alona Azure
+        <h2>Alona Azure</h2>
+        <img src="/media/images/Snapchat-1171261276_2.jpg" alt="Picture of Alona Azure" style="height: 200px; width: 200px; " >
+        <p style="font-size: 16px;">"My name is Alona, I'm a writer and a Software Developer. I'm also a married mother of five. My boys are the reason I wanted to do a gaming app in the first place. My sons love all things video games so being able to help create something like this that they can actually use was huge for me, and I know they will enjoy this app. I had so much fun working on this site with my amazing team. We really enjoyed creating this website and we hope you enjoy it as well."t</p>
       </div>
     </div>
   </div>
