--- a/templates/faq_detail.html
+++ b/templates/faq_detail.html
@@ -70,7 +70,7 @@
           <div class="card" style="width: 18rem;">
             <div class="card-header">
               {{node.comment}}
-              <h6>Created by: {{node.user}}</h6>
+              <h6>Created by: {{node.user.gamer_tag}}</h6>
             <a href="/reply_faq_comment/{{node.id}}/" class="card-link"><button class="btn btn-primary btn-sm" type="button">Reply</button></a>
               
             </div>
