--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -100,12 +100,12 @@
     </a>
       <a href="/profile/{{faq.user.id}}/">
       <footer class="blockquote-footer">  <cite title="Source Title">
-        Created By: {{faq.user}}
+        Created By: {{faq.user.gamer_tag}}
       <a href="/profile/{{faq.user.id}}/">
         <img  src="{{faq.user.picture.url}}" alt="Your profile photo" style="
-      height: 50px; 
-      width: 50px;
-      border-radius: 25px;
+      height: 40px; 
+      width: 40px;
+      border-radius: 20px;
       "/>
       </cite></footer>
       </a>
@@ -135,7 +135,7 @@
           <p> {{review.text}}</p>
         </a>
         <a href="/profile/{{review.user_created.id}}/">
-          <footer class="blockquote-footer">  <cite title="Source Title">Created By: {{review.user_created}}
+          <footer class="blockquote-footer">  <cite title="Source Title">Created By: {{review.user_created.gamer_tag}}
             <a href="/profile/{{review.user_created.id}}/">
               <img  src="{{review.user_created.picture.url}}" alt="Your profile photo" style="
             height: 50px; 
