--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -22,6 +22,9 @@
 
       <form action="" method="post">
         {% csrf_token %} {{ form | crispy }}
+        {% if form.errors %}
+        No!
+        {% endif %}
         <button class="btn-form" type="submit" style="margin-left: 110px">
           Submit
         </button>
