--- a/templates/review_detail.html
+++ b/templates/review_detail.html
@@ -38,7 +38,7 @@
           <div class="card" style="width: 18rem;">
             <div class="card-header">
               {{node.comment}}
-              <h6>Created by: {{node.user}}</h6>
+              <h6>Created by: {{node.user_created.gamer_tag}}</h6>
             <a href="/reply_review_comment/{{node.id}}/" class="card-link"><button class="btn btn-primary btn-sm" type="button">Reply</button></a>
               
             </div>
