Added Aris' about me

--- a/templates/about_devs.html
+++ b/templates/about_devs.html
@@ -30,7 +30,7 @@
       <div class="col">
         <h2>Aris Fornasari</h2>
         <img src="/media/images/ariswhitet.jpg" alt="Picture of Aris Fornasari" style="height: 200px; width: 200px; ">
-        <p style="font-size: 16px;">Test</p>
+        <p style="font-size: 16px;">"My name is Aris, and I came into Kenzie Academy without any knowledge of how to write a single line of code. Now, after a year of classes, I am able to put together a functioning website. When I’m not coding, you can find me playing video games or at the gym. Our team has come together collectively to create a game FAQ app because we all share a common interest in gaming. Being able to put this project together with a passionate team has been an amazing experience. I hope you enjoy our site as much as we do!"</p>
       </div>
       <div class="col">
         <h2>Alona Azure</h2>
