updated games detial and centered search and buttons on games home

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -112,6 +112,14 @@ input {
   align-items: center;
   width: auto;
 }
+
+.game-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+}
 /* .profile-container{
   margin-left: 30px;
 } */
